tests/sumo/meso/junction_control/tls_coordination/good/control.limited_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (3ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_7_0+1166-554a675755 started with time: 0.00
Simulation ended at time: 194.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.00s
 Real time factor: 48500
 UPS: 350750.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.42
 Duration: 46.77
 WaitingTime: 0.00
 TimeLoss: 24.73
 DepartDelay: 38.33

