tests/sumo/meso/junction_control/tls_coordination/bad/control.limited_tlsPenalty/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (12ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_7_0+1166-554a675755 started with time: 0.00
Simulation ended at time: 194.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 0.01s
 Real time factor: 38800
 UPS: 280600.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 6.42
 Duration: 46.77
 WaitingTime: 0.00
 TimeLoss: 24.73
 DepartDelay: 38.33

